Added support for links that arent initially detected or arent properly formatted via context-menu.

--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,33 @@
 {
-    "name": "YouTube Everywhere",
-    "short_name": "YouTubeEverywhere",
-    "description": "Open YouTube hyperlinks as embedded videos.",
-    "version": "1.0.1",
-    "manifest_version": 2,
-    "icons": {
+  "name": "YouTube Link-Player",
+  "short_name": "YouTubeLinkPlayer",
+  "description": "Open YouTube hyperlinks as embedded videos.",
+  "version": "1.2.0",
+  "manifest_version": 3,
+  "permissions": ["contextMenus", "menus"],
+  "icons": {
       "48": "images/icon.png"
-    },   
-    "web_accessible_resources": [
-      "images/toggle1.png",
-      "images/toggle2.png"
-    ], 
-    "content_scripts": [
+  },
+  "background": {
+      "scripts": ["background.js"],
+      "type": "module"
+  },
+  "content_scripts": [
       {
-      "matches": ["http://*/*", "https://*/*"],
-      "exclude_globs": ["https://www.youtube.com/*"],
-      "js": ["script.js"]
+          "matches": ["http://*/*", "https://*/*"],
+          "exclude_globs": ["https://www.youtube.com/*"],
+          "js": ["script.js"]
       }
-    ]
-  
-  }
+  ],
+  "web_accessible_resources": [
+      {
+          "resources": ["images/toggle.png"],
+          "matches": ["<all_urls>"]
+      }
+  ],
+  "browser_specific_settings": {
+    "gecko": {
+        "id": ""
+    }
+}
+}
