--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "YouTube Link-Player",
   "short_name": "YouTubeLinkPlayer",
   "description": "Open YouTube hyperlinks as embedded videos.",
-  "version": "1.2.0",
+  "version": "1.2.5",
   "manifest_version": 3,
   "permissions": ["contextMenus", "menus"],
   "icons": {
@@ -15,7 +15,7 @@
   "content_scripts": [
       {
           "matches": ["http://*/*", "https://*/*"],
-          "exclude_globs": ["https://www.youtube.com/*"],
+          "css": ["style.css"],
           "js": ["script.js"]
       }
   ],
